[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ompi"
version = "0.0.1"
description = "Openmacro Package Index"
authors = ["Amor Budiyanto <amor.budiyanto@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amooo-ooo/openmacro"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
fastapi = "*"
uvicorn = "*"
markdown = "*"
jinja2 = "*"

[tool.poetry.scripts]
dev = "openmacro.__main__:main"

[tool.poetry.extras]
dev = ["pytest"]
